--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="nav js-nav">
     <header class="nav-header">
-      <h1 class="nav-title"><strong>CSGO </strong>MM server picker</h1>
+      <h1 class="nav-title"><strong>CS:GO </strong>MM server picker</h1>
       <svg class="nav-header-icon">
         <use xlink:href="assets/img/icons.svg#icon-electron"></use>
       </svg>
@@ -47,6 +47,7 @@
   </nav>
 
   <main class="content">
+    <div id="loader" style="display:none;"></div>
     <button class="demo-button" id="eu-west">EU WEST<br /><span id="time-eu-west"></span></button>
     <button class="demo-button" id="eu-east">EU EAST<br /><span id="time-eu-east"></span></button>
     <button class="demo-button" id="na-west">NA WEST<br /><span id="time-na-west"></span></button>
