First stable version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="app/assets/css/variables.css">
   <link rel="stylesheet" href="app/assets/css/demo.css">
 
-  <title>CSGO MM Server Picker</title>
+  <title>CS:GO MM Server Picker</title>
 </head>
 
 <body>
@@ -27,14 +27,18 @@
     </center>
 
     <div class="demo-protip">
-      <h2>Select specific servers :</h2>
+      <h4>1. Select a region on the world map</h4>
+      <h4>2. Select the server where you want to play :</h4>
 
       <span id='servers-list'>
-        
+
       </span>
+
+      <h4>3. Click on "GO GO GO"</h4>
     </div>
 
-    <center><button class="demo-button" id="firewall-block">GO GO GO</button> <button class="demo-button" id="firewall-reset">Reset</button></center>
+    <center><button class="demo-button" id="firewall-block">GO GO GO</button> <button class="demo-button"
+        id="firewall-reset">Reset</button></center>
 
     <footer class="nav-footer">
       <button type="button" id="button-about" data-modal="about" class="nav-footer-button">About</button>
