New world map design

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
   <main class="content">
     <div id="loader" style="display:none;"></div>
-    <button class="demo-button" id="eu-west">EU WEST<br /><span id="time-eu-west"></span></button>
-    <button class="demo-button" id="eu-east">EU EAST<br /><span id="time-eu-east"></span></button>
-    <button class="demo-button" id="na-west">NA WEST<br /><span id="time-na-west"></span></button>
-    <button class="demo-button" id="na-east">NA EAST<br /><span id="time-na-east"></span></button>
-    <button class="demo-button" id="sa">SA<br /><span id="time-sa"></span></button>
-    <button class="demo-button" id="oc">OC<br /><span id="time-oc"></span></button>
-    <button class="demo-button" id="af">AF<br /><span id="time-af"></span></button>
-    <button class="demo-button" id="as">AS<br /><span id="time-as"></span></button>
+    <div class="dot-red" id="eu-west"><div class="cluster-box">EU WEST<br /><span id="time-eu-west"></span></div></div>
+    <div class="dot-red" id="eu-east"><div class="cluster-box">EU EAST<br /><span id="time-eu-east"></span></div></div>
+    <div class="dot-red" id="na-west"><div class="cluster-box">NA WEST<br /><span id="time-na-west"></span></div></div>
+    <div class="dot-red" id="na-east"><div class="cluster-box">NA EAST<br /><span id="time-na-east"></span></div></div>
+    <div class="dot-red" id="sa"><div class="cluster-box">SA<br /><span id="time-sa"></span></div></div>
+    <div class="dot-red" id="oc"><div class="cluster-box">OC<br /><span id="time-oc"></span></div></div>
+    <div class="dot-red" id="af"><div class="cluster-box">AF<br /><span id="time-af"></span></div></div>
+    <div class="dot-red" id="as"><div class="cluster-box">AS<br /><span id="time-as"></span></div></div>
   </main>
 </body>
 
