--- a/index.html
+++ b/index.html
@@ -23,25 +23,32 @@
     </header>
 
     <center>
-      <button class="demo-button" id="ping">Ping servers</button>
+      <button class="demo-button" id="ping">📡 Ping</button>
     </center>
 
     <div class="demo-protip">
-      <h4>1. Select a region on the world map</h4>
-      <h4>2. Select the server where you want to play :</h4>
+      <p><b>1.</b> Select a region on the world map</p>
+      <p><b>2.</b> Select the servers where you want to play :</p>
 
       <span id='servers-list'>
 
       </span>
 
-      <h4>3. Click on "GO GO GO"</h4>
+      <p><b>3.</b> Click on "GO"</p>
     </div>
 
-    <center><button class="demo-button" id="firewall-block">GO GO GO</button> <button class="demo-button"
-        id="firewall-reset">Reset</button></center>
+    <center>
+      <button class="demo-button" id="firewall-block">✔️ GO</button>
+      <button class="demo-button" id="ping">🚀 CS:GO</button>
+    </center>
+    </br>
+    <center>
+      <button class="demo-button" id="firewall-reset">♻️ Reset</button>
+    </center>
 
     <footer class="nav-footer">
-      <button type="button" id="button-about" data-modal="about" class="nav-footer-button">About</button>
+      <button type="button" id="button-about" data-modal="about" class="nav-footer-button">🌐 About</button>•
+      <button type="button" id="button-about" data-modal="about" class="nav-footer-button">🍌 GameBanana</button>
       <a class="nav-footer-logo" href="https://github.com" aria-label="Homepage">
         <svg class="nav-footer-icon">
           <use xlink:href="assets/img/icons.svg#icon-love"></use>
@@ -52,14 +59,30 @@
 
   <main class="content">
     <div id="loader" style="display:none;"></div>
-    <div class="dot-red" id="eu-west"><div class="cluster-box">EU WEST<br /><span id="time-eu-west"></span></div></div>
-    <div class="dot-red" id="eu-east"><div class="cluster-box">EU EAST<br /><span id="time-eu-east"></span></div></div>
-    <div class="dot-red" id="na-west"><div class="cluster-box">NA WEST<br /><span id="time-na-west"></span></div></div>
-    <div class="dot-red" id="na-east"><div class="cluster-box">NA EAST<br /><span id="time-na-east"></span></div></div>
-    <div class="dot-red" id="sa"><div class="cluster-box">SA<br /><span id="time-sa"></span></div></div>
-    <div class="dot-red" id="oc"><div class="cluster-box">OC<br /><span id="time-oc"></span></div></div>
-    <div class="dot-red" id="af"><div class="cluster-box">AF<br /><span id="time-af"></span></div></div>
-    <div class="dot-red" id="as"><div class="cluster-box">AS<br /><span id="time-as"></span></div></div>
+    <div class="dot-red" id="eu-west">
+      <div class="cluster-box">EU WEST<br /><span id="time-eu-west"></span></div>
+    </div>
+    <div class="dot-red" id="eu-east">
+      <div class="cluster-box">EU EAST<br /><span id="time-eu-east"></span></div>
+    </div>
+    <div class="dot-red" id="na-west">
+      <div class="cluster-box">NA WEST<br /><span id="time-na-west"></span></div>
+    </div>
+    <div class="dot-red" id="na-east">
+      <div class="cluster-box">NA EAST<br /><span id="time-na-east"></span></div>
+    </div>
+    <div class="dot-red" id="sa">
+      <div class="cluster-box">SA<br /><span id="time-sa"></span></div>
+    </div>
+    <div class="dot-red" id="oc">
+      <div class="cluster-box">OC<br /><span id="time-oc"></span></div>
+    </div>
+    <div class="dot-red" id="af">
+      <div class="cluster-box">AF<br /><span id="time-af"></span></div>
+    </div>
+    <div class="dot-red" id="as">
+      <div class="cluster-box">AS<br /><span id="time-as"></span></div>
+    </div>
   </main>
 </body>
 
