--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 
     <footer class="nav-footer">
       <center>
-       <button type="button" id="button-about" data-modal="about" class="nav-footer-button">🌐 About</button>•
-        <button type="button" id="button-banana" data-modal="about" class="nav-footer-button">🍌 GameBanana</button>
+        <button type="button" id="button-about" data-modal="about" class="nav-footer-button">🌐 About</button>•
+        <button type="button" id="button-banana" data-modal="about" class="nav-footer-button">🍌 GameBanana</button>•
+        <span id="version"></span>
       </center>
     </footer>
   </nav>
