Add CS:GO button functionality

--- a/desktop/index.html
+++ b/desktop/index.html
@@ -36,7 +36,7 @@
 
     <center>
       <button class="demo-button" id="firewall-block">✔️ GO</button>
-      <button class="demo-button" id="ping">🚀 CS:GO</button>
+      <button class="demo-button" id="csgo">🚀 CS:GO</button>
     </center>
     </br>
     <center>
