--- a/desktop/index.html
+++ b/desktop/index.html
@@ -25,7 +25,7 @@
 
     <div class="demo-protip">
       <p><b>1.</b> Select a region on the world map</p>
-      <p><b>2.</b> Select the servers where you want to play :</p>
+      <p><b>2.</b> Select the servers you want to play on :</p>
 
       <span id='servers-list'>
 
