Add Windows Firewall informational message

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </header>
 
     <center>
+      <p style="color:red;font-style: italic;font-weight:bold;font-size:11px">You must enable Windows Firewall for the
+        app to work</p>
       <button class="demo-button" id="ping">📡 Ping</button>
     </center>
 
@@ -38,7 +40,7 @@
       <button class="demo-button" id="firewall-block">✔️ GO</button>
       <button class="demo-button" id="csgo">🚀 CS:GO</button>
     </center>
-    </br>
+
     <center>
       <button class="demo-button" id="firewall-reset">♻️ Reset</button>
     </center>
