--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     </header>
 
     <center>
-      <p style="color:red;font-style: italic;font-weight:bold;font-size:11px">You must enable Windows Firewall for the
-        app to work</p>
+      <p id="firewallMessage" style="color:red;font-style: italic;font-weight:bold;font-size:11px"></p>
       <button class="demo-button" id="ping">📡 Ping</button>
     </center>
 
@@ -40,6 +39,8 @@
       <button class="demo-button" id="firewall-block">✔️ GO</button>
       <button class="demo-button" id="csgo">🚀 CS:GO</button>
     </center>
+
+    </br>
 
     <center>
       <button class="demo-button" id="firewall-reset">♻️ Reset</button>
