--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </header>
 
     <center>
-      <p style="color:red;font-style: italic;font-weight:bold;font-size:11px">You must enable Windows Firewall for the
+      <p id="firewallMessage" style="color:red;font-style: italic;font-weight:bold;font-size:11px">You must enable
+        Windows Firewall for the
         app to work</p>
       <button class="demo-button" id="ping">📡 Ping</button>
     </center>
