--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
       <div class="cluster-box">AS<br /><span id="time-as"></span></div>
     </div>
   </main>
+
+  <a href="">
+    <div id="ad" class="main-footer">
+      <div class="footer-top">
+        CS:GO MM Server Picker gives you a free case by clicking this referral banner :
+      </div>
+      <footer class="footer-bot">
+      </footer>
+    </div>
+  </a>
 </body>
 
 <script type="text/javascript">
